fixed sass fuckup and improve pagination title contrast

--- a/src/scss/_19nav.scss
+++ b/src/scss/_19nav.scss
@@ -3,7 +3,7 @@
   border-top: 1px solid $light_text_color;
   border-bottom: 1px solid $light_text_color;
   .pagination_title {
-    color: $brand_color;
+    color: white;
   }
 }
 
